--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ section{
     padding: 6rem 0;
 }
 
-section h1,
 section h2{
     text-align: center;
     margin-bottom: 4rem;
@@ -169,19 +168,6 @@ nav button{
     right: 10%;
 }
 
-/* .logo-scroll{
-    color: var(--color-primary)
-}
-.a-scroll{
-    color: var(--color-dark);
-}
-.menu-before{
-    color: var(--color-white);
-}
-.menu-scroll{
-    color: var(--color-dark);
-} */
-
 /* ============ HEADER ============ */
 
 .header{
@@ -222,10 +208,6 @@ nav button{
     align-items: center;
     gap: 5rem;
     height: 85%;
-}
-
-.about__left h1{
-    text-align: start;
 }
 
 .about__left p{
@@ -307,10 +289,6 @@ nav button{
 
 .contact__left p{
     margin: 2rem 0 2.4rem;
-}
-
-.contact__left h1{
-    text-align: start;
 }
 
 .contact__right{
